# checke-rs

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
src/: bitboard.rs  board.rs  error.rs  lib.rs  moves.rs  position.rs  square.rs  turn.rs
tests/: bitboard_tests.rs  board_tests.rs  move_tests.rs  position_tests.rs  square_tests.rs  turn_tests.rs
