[package]
name = "checke-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

lazy_static = "1.4.0"
thiserror = "1.0.40"
regex = "1.8.3"

[dev-dependencies]
test-case = "3.1.0"
