[package]
name = "checke-rs"
description = "Feature rich and easy to use checkers engine."
authors = ["Justin Sexton"]
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/JSextonn/checke-rs"

[dependencies]
num = "0.4.0"
num-derive = "0.4.0"
num-traits = "0.2.15"

lazy_static = "1.4.0"
thiserror = "1.0.40"
regex = "1.8.3"

[dev-dependencies]
test-case = "3.1.0"
